[gd_scene load_steps=3 format=3 uid="uid://completion_uid"]

[ext_resource type="Script" path="res://scripts/Completion.gd" id="1_completion"]
[ext_resource type="Theme" path="res://assets/vocab_zoo_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" uid="uid://bpc6q2aites4q" path="res://assets/pixelart_starfields (1)/pixelart_starfield_corona.png" id="3_starfield"]

[node name="Completion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_completion")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
texture = ExtResource("3_starfield")
stretch_mode = 6

[node name="CenterContent" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -100.0
offset_right = 350.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContent/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.973, 0.98, 0.988, 1)
theme_override_font_sizes/font_size = 48
text = "Activity Complete"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="CenterContent/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.973, 0.98, 0.988, 1)
theme_override_font_sizes/font_size = 24
text = "Great job!"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 200.0
offset_right = 90.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Play Again"

